--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="hero-image">
-       
+
 
         <div class="image-two">
           <img src="./images/image-mockups.png" alt="">
@@ -60,15 +60,15 @@
 
     <div class="features">
       <div class="features-text">
-        <h2>Why choose Easybank?</h2>
+        <h1>Why choose Easybank?</h1>
         <p>
           We leverage Open Banking to turn your bank account into your
-          financial hub. Control your finances like never before.
+          financial hub. <br> Control your finances like never before.
         </p>
       </div>
 
       <div class="features-points">
-        <div class="feature-one">
+        <div class="feature one">
           <img src="./images/icon-online.svg" alt="">
           <h3>Online Banking</h4>
             <p>
@@ -79,7 +79,7 @@
 
         </div>
 
-        <div class="feature-two">
+        <div class="feature two">
           <img src="./images/icon-budgeting.svg" alt="">
           <h4>Simple Budgeting</h4>
           <p> See exactly where your money goes each month.
@@ -87,7 +87,7 @@
           </p>
         </div>
 
-        <div class="feature-three">
+        <div class="feature three">
           <img src="./images/icon-onboarding.svg" alt="">
           <h4>Fast Onboarding</h4>
           <p>
@@ -98,7 +98,7 @@
 
         </div>
 
-        <div class="feature-four">
+        <div class="feature four">
           <img src="./images/icon-api.svg" alt="">
           <h4>Open API</h4>
           <p>
@@ -111,12 +111,13 @@
     </div>
 
     <div class="articles">
-      <h2>Latest Articles</h2>
+      <h1>Latest Articles</h1>
       <div class="artic">
         <div class="article">
           <img src="./images/image-currency.jpg" alt="" width="200px" height="150px">
           <h4>By Claire Robinson</h4>
-          <p>Receive money in any currency with no fees The
+          <h3>Receive money in any currency with no fees </h3>
+          <p>The
             world is getting smaller and we’re becoming more mobile. So why should
             you be forced to only receive money in a single …
           </p>
@@ -124,8 +125,9 @@
         <div class="article">
           <img src="./images/image-restaurant.jpg" alt="" width="200px" height="150px">
           <h4>By Wilson Hutton</h4>
+          <h3>Treat yourself without worrying about money</h3>
           <p>
-            Treat yourself without worrying about money Our
+            Our
             simple budgeting feature allows you to separate out your spending and
             set realistic limits each month. That means you …
 
@@ -136,9 +138,9 @@
         <div class="article">
           <img src="./images/image-plane.jpg" alt="" width="200px" height="150px">
           <h4>By Wilson Hutton</h4>
+          <h3>Take your Easybank card wherever you go</h3>
           <p>
-            Take your Easybank card wherever you go We want you
-            to enjoy your travels. This is why we don’t charge any fees on
+            We want you to enjoy your travels. This is why we don’t charge any fees on
             purchases while you’re abroad. We’ll even show you …
 
           </p>
@@ -147,8 +149,9 @@
         <div class="article">
           <img src="./images/image-confetti.jpg" alt="" width="200px" height="150px">
           <h4>By Claire Robinson</h4>
+          <h3>Our invite-only Beta accounts are now live!</h3>
           <p>
-            Our invite-only Beta accounts are now live! After a
+            After a
             lot of hard work by the whole team, we’re excited to launch our closed
             beta. It’s easy to request an invite through the site ...
 
@@ -161,7 +164,7 @@
     <div class="footer">
       <div class="icons">
         <img src="./images/logo-dark.svg" alt="">
-        <div>
+        <div class="socials">
           <img src="./images/icon-facebook.svg" alt="">
           <img src="./images/icon-twitter.svg" alt="">
           <img src="./images/icon-instagram.svg" alt="">
