--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div class="">
+  <div class="container">
     <div class="head">
       <div class="logo">
         <img src="./images/logo.svg" alt="" />
@@ -48,6 +48,11 @@
       </div>
 
       <div class="hero-image">
+
+        <div class="image-one">
+          <img src="./images/mockup-mobile.png" alt="" width="350px">
+
+        </div>
 
 
         <div class="image-two">
